loan application two

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -21,7 +21,7 @@
                         <!-- <ng-template > -->
                             <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab p-0" style="padding:0px !important">
                                 <kt-ornaments (OrnamentsDataEmit)="OrnamentsDataEmit($event)" [action]="action"
-                                [invalid]="invalid.ornaments" [disable]="disabledForm" [details]="customerDetail">
+                                [invalid]="invalid.ornaments" [disable]="disabledForm" [details]="customerDetail" (totalAmt)="total($event)">
                             </kt-ornaments>
                             </div>
                         <!-- </ng-template> -->
