--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-view/emi-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-view/emi-details-view.component.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row py-2">
             <div class="col-md-5 text-muted">
-                EMI Start Date
+                EMI Due Date
             </div>
             <div class="col-md-7">
                 {{orderData?.EmiStartDate | date:'medium'}}
@@ -45,7 +45,7 @@
         </div>
         <div class="row py-2">
             <div class="col-md-5 text-muted">
-                EMI End Date
+                EMI Payment Date
             </div>
             <div class="col-md-7">
                 {{orderData?.EmiEndDate | date:'medium'}}
