right align removed

--- a/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
@@ -47,7 +47,7 @@
 
                 <ng-container matColumnDef="fileName">
                     <mat-header-cell *matHeaderCellDef>File Name</mat-header-cell>
-                    <mat-cell *matCellDef="let report">{{report?.originalname}}</mat-cell>
+                    <mat-cell *matCellDef="let report" class="image-text-truncate">{{report?.originalname}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="userName">
                     <mat-header-cell *matHeaderCellDef>Username</mat-header-cell>
