Changes in filtered data

--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -1,5 +1,5 @@
 <kt-toastr #toastr></kt-toastr>
-<kt-filtered-data [filteredList]="filteredDataList"></kt-filtered-data>
+<kt-filtered-data [filteredList]="filteredDataList" [filterName]="'deposit'"></kt-filtered-data>
 <kt-portlet>
     <!-- PORTLET LOADING | Binded to TABLE Datasource -->
     <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
