--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-5">
-                                <label [class.mandatory]="isMandatory">Select SubCategory</label>
+                                <label [class.mandatory]="isMandatory">Select Sub-Category</label>
                             </div>
                             <div class="col-7">
                                 <select class="form-control" name="subCategoryId" formControlName="subCategoryId"
@@ -179,7 +179,7 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Weight(gm):</div>
+                    <div class="col-6 text-muted">Weight (gm):</div>
                     <div class="col-6">{{productData?.weight}}</div>
                 </div>
             </div>
