changes in filtered

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -161,7 +161,7 @@
                         numbersOnly />
                     </div>
                     <div class="col-3">
-                      <label>By Tenure(m)</label>
+                      <label>By Tenure(months)</label>
                       <kt-multi-select-search [items]="paymentTypeList" [multiple]="true" bindLabel="paymentType"
                         formControlName="paymentType" [isClear]="clearData"></kt-multi-select-search>
                     </div>
@@ -196,7 +196,7 @@
                       <mat-datepicker #pickerStartDate></mat-datepicker>
                     </div>
                     <div class="col-6">
-                      <label>By Tenure(m)</label>
+                      <label>By Tenure(months)</label>
                       <kt-multi-select-search [items]="paymentTypeList" [multiple]="true" bindLabel="paymentType"
                         formControlName="paymentType" [isClear]="clearData"></kt-multi-select-search>
                     </div>
