--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -64,7 +64,10 @@
         (action)="buttonValue($event)"></kt-button>
 </ng-template>
 <ng-template #elseBlock>
-    <kt-button *ngIf="value1 && button" [value]='value1' [type]='type1' (click)="action($event)"
-        (action)="buttonValue($event)" class="kt-margin-r-10 kt-margin-l-10">
+    <kt-button *ngIf="value1" [value]='value1' [type]='type1' (click)="action($event)" (action)="buttonValue($event)"
+        class="kt-margin-r-10 kt-margin-l-10">
+    </kt-button>
+    <kt-button *ngIf="button" [value]='value5' [type]='type5' (click)="action($event)" (action)="buttonValue($event)"
+        class="kt-margin-r-10 kt-margin-l-10">
     </kt-button>
 </ng-template>
