--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -172,7 +172,7 @@
                 </table>
             </div>
         </div>
-        <div class="row justify-content-center " *ngIf="controls.loanStatusForAppraiser.value == 'pending'">
+        <div class="row justify-content-center " *ngIf="controls.loanStatusForAppraiser.value && controls.loanStatusForAppraiser.value != 'approved'">
             <div class="col-8">
                 <mat-form-field class="w-100">
 
@@ -184,7 +184,7 @@
 
             </div>
         </div>
-        <div class="row justify-content-center " *ngIf="controls.loanStatusForBM.value == 'rejected'">
+        <div class="row justify-content-center " *ngIf="controls.loanStatusForBM.value != 'pending' && controls.loanStatusForBM.value != 'approved'">
             <div class="col-8">
                 <mat-form-field class="w-100">
 
