--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -237,7 +237,8 @@
                                     <td>{{date.key | date :'mediumDate'}}</td>
 
                                     <td [attr.rowspan]="colJoin" class="text-center" *ngIf="(idx%colJoin == 0 || colJoin == null)">
-                                        {{intrestAmount | currency : 'INR'}}</td>
+                                         <span class="currency">
+                                            {{intrestAmount | currency:'INR'}}</span></td>
 
                                 </tr>
                             </tbody>
@@ -246,10 +247,11 @@
                                     <td>{{date.key | date :'mediumDate'}}</td>
                                     <td [attr.rowspan]="colJoin" class="text-center"
                                         *ngIf="(idx%colJoin == 0 || colJoin == null) && (dateOfPayment.length%colJoin < dateOfPayment.length-idx)">
-                                        {{intrestAmount | currency : 'INR'}}</td>
+                                        <span class="currency">
+                                            {{intrestAmount | currency:'INR' }}</span></td>
                                     <td [attr.rowspan]="colJoin" class="text-center"
                                         *ngIf="(idx%colJoin == 0 || colJoin == null) && (dateOfPayment.length%colJoin >= dateOfPayment.length-idx)">
-                                        {{(intrestAmount /colJoin) * (dateOfPayment.length%colJoin) | currency : 'INR'}}
+                                        <span class="currency"> {{(intrestAmount /colJoin) * (dateOfPayment.length%colJoin) | currency : 'INR'}}</span>
                                     </td>
 
                                 </tr>
@@ -257,18 +259,23 @@
                             <tfoot>
                                 <tr>
                                     <td><strong>Total Amount</strong></td>
-                                    <td *ngIf="colJoin != null">
-                                        <strong>{{(intrestAmount/colJoin) * dateOfPayment.length | currency : 'INR'}}</strong>
+                                    <td *ngIf="colJoin != null"  class="text-center">
+                                        <strong><span class="currency">
+                                            {{(intrestAmount/colJoin) * dateOfPayment.length | currency:'INR'}}</span>
+                                            </strong>
                                     </td>
-                                    <td *ngIf="colJoin == null">
-                                        <strong>{{(intrestAmount) * dateOfPayment.length | currency : 'INR'}}</strong>
+                                    <td *ngIf="colJoin == null" class="text-center">
+                                        <strong>
+                                            <span class="currency">
+                                                {{(intrestAmount) * dateOfPayment.length | currency : 'INR'}}
+                                            </span></strong>
                                     </td>
                                 </tr>
                             </tfoot>
                         </table>
                     </div>
 
-                    <div class="kt-margin-t-20 kt-margin-b-30">
+                    <div class="kt-margin-t-20 kt-margin-b-30 text-right">
                         <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
                     </div>
                 </div>
