changes in ui and loan

--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -21,6 +21,6 @@
 </div>
 
 <div class="gold-rate text-center">
-	<span class="kt-aside__gold-rate">Gold rate: </span>{{goldRate}} /gm
+	<span class="kt-aside__gold-rate">Gold rate: </span>{{goldRateService.goldRate$ | async}} /gm
 </div>
 <!-- end:: Brand -->
